objects/Punch_List__c.object
<CustomObject>
    <fields>
        <fullName>Approved__c</fullName>
        <label>Approved</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested__c</fullName>
        <label>Requested</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitted__c</fullName>
        <label>Submitted</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Punch List</label>
    <nameField>
        <label>Punch  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PunchLists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>